# eu_emisions

./: .coverage  .gitignore  README.md  app.py  main.py  models.py  pyproject.toml  requirements.txt  traducir_template.py  vercel.json
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html  script.js.html
instance/: contact_messages.db
scripts/: functionss.py
static/: script.js
static/css/: about.css  country_details.css  data_style.css  data_variables.css  eda_style.css  form.css  home.css  project.css  style.css  variables.css
static/data_script/: country_data.js  emissions.csv  emissions_europe.csv  general_data.js  map_emissions.js  project.js  sector_data.js
static/img/eda/: code_analysis.py  missing_data.html  negative_values.csv  obs_value_stats.html  top_correlations.html
static/js/: contact.js  data.js  index.js  script.js  traduction.js
static/json/: emisiones_co2.json
static/package/: data_world_countries.csv
templates/: about.html  country_data.html  country_details.html  dashboard.html  form.html  index.html  layout.html  project.html  thanks.html
templates/data_template/: country_data.html  eda.html  general_data.html  sector_data.html
templates_en/: about.html  country_details.html  form.html  index.html  layout.html  project.html  thanks.html
