[tool.poetry]
name = "eu-emissions"
version = "0.1.0"
description = "Proyecto de análisis de emisiones de la UE"
authors = ["Ana Silva<tlucia.silva@factoriaf5.org>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"